--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "untitled3",
+  "name": "lab3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "jsdom": "^21.1.1",
-    "request": "^2.88.2",
-    "sinon": "^15.0.3"
-  },
-  "devDependencies": {
-    "mocha": "^10.2.0"
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
