--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "joi": "^17.9.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
