--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "tedious": "^16.1.0"
   }
 }
